# GremlinGames

./: README.md
BizPlan/: CrossWorlds Dev Plan.doc  Dungeon Lore.doc  Investor's Prospectus Details.doc  The Fringe - Initial Investment Prospectus.doc  The Fringe - Promissory Note.doc
BizPlan/BizPlan_Billy/: MMORPG_Companies_List.xls  Temp Subscriptions.xls
BizPlan/Letters of Recommendation/: letterofrecommendation - Roper.doc
ColorCompositing/: RunCompositor.bat  input.xml
CrossWorlds/Art/: RobotArena.osgv
Documentation/: Fighter Tactics.mht  James Legend.doc  Physics Fighter Flight Model.doc  ProjectDependencies.ppt
Documentation/AI_Designs/: AI_Notes.txt  AI_Simulation.ppt
Documentation/FrameWork/: ConfigManager.ppt  Entity3D.ppt  Fringe_Base.ppt  Fringe_Base2.ppt
Documentation/OSGV/: OsgNode.ppt
Evolutions/Art/: SB_Chassis0000.tif
Fringe/: desktop.ini
Fringe/Art/: EarthAndMoon.osgv  JamesEarthAndMoon.osgv  shuttle.osgv
Fringe/Art-2/: 30m-ThrustGlow.lws  JamesEarthAndMoon.osgv  ObstacleCourse.osgv  Test Looping Scene 001-2min.lws  karackuss_setup.lws
Fringe/Art-3/: ContentCompile_HIGH_RES.bat  ContentCompile_LOW_RES.bat
Fringe/Art-4_Miramar/: ContentCompile_HIGH_RES.bat  ContentCompile_LOW_RES.bat
Fringe/Business Publications/: Backup_of_fringeBizCard_01.cdr  fringeBizCard_01.cdr  fringeBizCard_01b.cdr
Fringe/Design/: Random Feature Ideas.rtf  (+4 more)
Gremlin ART/: Gremlin Logo Animated 01.lwo  Gremlin Logo Animated 01_v001.lwo  Simple 01.lws  Simple 01.osgv
RefernceCode/: RTME_Common.h
Source/: CompilerSettings.h  ExecutableVersionSystem.hpp  doxygen.config
Source/James/CMakeTest/GG/Source/GG_FrameWork/Base/: CMakeLists.txt
Tools/: rubyembed-0.2.tar
Trunk/Source/James/CMakeTest/GG/Source/GG_FrameWork/Threads/: CMakeLists.txt
beta_bin/: _SDKUpdate.bat
db/: uuid
debug_bin/: _SDKUpdate_OSGSVN_VS9.bat
stable_bin_VS9/: TestButterflyRobot.lua  TestNonaRobot.lua  TestSwerveRobot.lua  TestTankRobot.lua  UpdateLog.txt  userPrefs-FRC2012.xml
(+6212 files in other folders)
